--- a/bPerformanceTracker/bPerformanceTracker.csproj
+++ b/bPerformanceTracker/bPerformanceTracker.csproj
@@ -42,11 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Source\Config\Config.cs" />
+    <Compile Include="Source\Enum\LogType.cs" />
+    <Compile Include="Source\Helpers\Logger.cs" />
+    <Compile Include="Source\Helpers\PerformanceManager.cs" />
+    <Compile Include="Source\Models\PerformanceDataEntry.cs" />
+    <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
